--- a/src/components/NavbarStyle.css
+++ b/src/components/NavbarStyle.css
@@ -43,3 +43,13 @@
     border-radius: 4px;
     transition: all 0.2s ease-in-out;
 }
+
+.nav-links-mobile {
+    display: none;
+}
+
+.button {
+    padding: 0.5rem 1rem;
+    white-space: nowrwap;
+    
+}
