--- a/src/components/NavbarStyle.css
+++ b/src/components/NavbarStyle.css
@@ -1,16 +1,19 @@
 .NavbarItems {
+    background-color: #fff;
+    /* margin-left: 1rem; 
+    margin-right: 1rem;  */
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 30px;
     box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.25);
-    width: 95%; /* Change width to 100% */
+    width: 95%;
     height: 80px;
     border-radius: 13px;
     position: fixed;
     top: 20px;
-    left: 50;
-    transform: translate(-50);
+    left: 50%;
+    transform: translate(-50%);
     z-index: 9999;
 }
 
