--- a/src/components/DestinationStyle.css
+++ b/src/components/DestinationStyle.css
@@ -9,7 +9,16 @@
 .first-dest{
     display: flex;
     align-items: center;
+    /* flex-direction: column-reverse; */
     justify-content: space-between;
+    margin-top: 4.5rem;
+}
+
+.first-dest-reverse{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row-reverse;
     margin-top: 4.5rem;
 }
 
@@ -54,12 +63,18 @@
 
 @media screen and (max-width: 850px) {
     .destination {
-        margin: 4rem 6rem;
+        margin: 4rem 2rem;
     }
     .first-dest{
         display: flex;
         flex-direction: column-reverse;
         margin-top: 2.5rem;
+    }
+
+    .first-dest-reverse{
+        display: flex;
+        flex-direction: column-reverse;
+        margin-top: 4.5rem;
     }
 
     .dest-text {
