--- a/src/components/HeroStyle.css
+++ b/src/components/HeroStyle.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.cdnfonts.com/css/comodo');
+
 .hero {
     width: 100%;
     height: 100vh;
     position: relative;
+    font-family: 'Comodo', sans-serif;
 }
+
 
 .hero-mid {
     width: 100%;
