--- a/src/components/HeroStyle.css
+++ b/src/components/HeroStyle.css
@@ -58,6 +58,23 @@ img{
     display: none;
 }
 
+.hero-slider {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+  }
+  
+  .slick-dots li button:before {
+    color: #fff;
+  }
+  
+  .slick-prev,
+  .slick-next {
+    z-index: 1;
+    color: #fff;
+  }
+  
+
 @media screen and (max-width: 555px){
     .hero-text h1 {
         padding: 10px 20px;
